--- a/mwn/.eslintrc.json
+++ b/mwn/.eslintrc.json
@@ -11,7 +11,8 @@
         "ecmaVersion": "latest"
     },
     "rules": {
-        // "indent": ["error", 4],
+        "comma-spacing": ["error", { "before": false, "after": true }],
+        "indent": ["error", 4, { "outerIIFEBody": 0, "SwitchCase": 1 }],
         // "linebreak-style": ["error", "unix"],
         "semi": ["error", "always"]
     }
